[package]
name = "hrckern"
version = "0.1.0"
edition = "2024"
authors = ["Pedro Rocha Horchulhack <pedro@prhrck.com>"]

[lib]
crate-type = ["staticlib"]
name = "hrckern"
path = "src/lib.rs"
test = false
bench = false

[build]
target = "x86_64-unknown-none"

[package.metadata.bootimage]
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file=target/hrckern/debug/bootimage-hrckern.bin"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = {version="0.9"}
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
spin = "0.10.0"
